test/testdata/classes/inheritance/superclass_variable_non_class_error.lox
var Superclass = "not a class";

// error: expected superclass to be a class, got 'string'
class Subclass < Superclass {}
_ = Subclass;
